Samples/Errors/MissingIdentifier.gs
//This is a G# program with errors. An Identifier is missing.

point ro;

point "zeta";

//End of program